# cdk

./: .dockerignore  .gitignore  API.md  DEPLOY_LINUX.md  Dockerfile  Makefile  README.md  docker-compose.yml
.trellis/: .template-hashes.json
.trellis/spec/backend/: announcement-api.md  cdk-binding-events.md  database-guidelines.md  directory-structure.md  error-handling.md  feedback-api.md  hash-sync.md  index.md  logging-guidelines.md  quality-guidelines.md  skinforge-delivery.md
.trellis/spec/frontend/: component-guidelines.md  directory-structure.md  hook-guidelines.md  index.md  quality-guidelines.md  state-management.md  type-safety.md
backend/: .env.example  Cargo.toml
backend/migrations/: 001_init.sql  002_add_created_by.sql  003_create_user_feedback.sql  004_add_feedback_done_fields.sql  005_add_feedback_reply_fields.sql  006_create_announcements.sql  007_create_skinforge_delivery.sql  008_create_cdk_binding_history.sql
backend/src/: cdk_events.rs  config.rs  db.rs  errors.rs  hash_sync.rs  kdocs.rs  main.rs
backend/src/handlers/: announcement.rs  auth.rs  banned.rs  cdk.rs  cdk_events.rs  feedback.rs  mod.rs  skinforge.rs
backend/src/middleware/: auth.rs
backend/src/models/: announcement.rs  banned.rs  cdk.rs  feedback.rs  mod.rs  skinforge.rs  user.rs
cli/: Cargo.toml
cli/src/: main.rs
deploy/: cdk-server.service  entrypoint.sh  migrate-export.sh  migrate-import.sh  nginx-docker.conf  nginx.conf  setup.sh  supervisord.conf
deploy/mysql-init/: 01_schema.sql
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
(+79 files in other folders)
