[package]
name = "cdk-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "mysql", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
bcrypt = "0.16"
uuid = { version = "1", features = ["v4"] }
tower-http = { version = "0.6", features = ["cors"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["native-tls", "stream", "json"] }
futures-util = "0.3"
sha2 = "0.10"
sha1 = "0.10"
flate2 = "1"
aes-gcm = "0.10"
base64 = "0.22"
semver = "1"
tokio-util = { version = "0.7", features = ["io"] }
